# wireguard

./: Cargo.toml  LICENSE  README.md
src/: builder.rs  interface.rs  main.rs  peer.rs  utils.rs  wireguard.rs
tests/: client.private.key  client.public.key  server.private.key  server.public.key
