[package]
name = "wireguard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-recursion = "1.1.1"
base64 = "0.22.1"
boringtun = "0.6.0"
dashmap = "6.1.0"
futures = "0.3.31"
getifaddrs = "0.1.5"
lazy_static = "1.5.0"
rand = "0.9.0"
route_manager = "0.1.3"
structopt = "0.3.26"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13",features = ["codec"]}
tun-rs = { version = "2.0.6", features = ["async"] }
